--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 VITE_API_KEY=ySNuXhxHG4XQJ1QjKVjEPASym7evPqvG&q
-VITE_API_URL="https://kudos-board-ptuy.onrender.com"
+VITE_API_URL="https://kudos-board-1-xcua.onrender.com"
